--- a/composer.json
+++ b/composer.json
@@ -34,6 +34,7 @@
         "symfony/property-info": "7.3.*",
         "symfony/runtime": "7.3.*",
         "symfony/security-bundle": "7.3.*",
+        "symfony/security-core": "7.3.*",
         "symfony/serializer": "7.3.*",
         "symfony/stimulus-bundle": "^2.25",
         "symfony/string": "7.3.*",
